2010-11-29  Charlie Zender  <zender@uci.edu>

	* Clean-up and fix order of operations

	* Work to guarantee that _FillValue is within packing range

	* Quiet lengthy thread messages

	* Merge ncflint.c (including MSA, AUX) from 4.0.5 into mpncflint.c

	* Merge ncecat.c (including MSA, AUX) from 4.0.5 into mpncecat.c

	* Merge MSA aspects of ncbo.c from 4.0.5 into mpncbo.c

	* Change URLs of NCO forums to, e.g.,
	http://sourceforge.net/projects/nco/forums/forum/9830

2010-11-23  Charlie Zender  <zender@uci.edu>

	* Merge ncbo.c from 4.0.5 into mpncbo.c
	Code compiles and links. Behavior is untested.

2010-10-28  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.6 release procedure:
 	Changes since nco-4_0_5: clang, YYYYMMDD-averaging
	cd ~/nco;cvs tag -d nco-4_0_6;cvs tag -d nco-4_0_6-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.6 release"
	cvs tag -c nco-4_0_6;cvs tag -c nco-4_0_6-1

2010-10-27  Charlie Zender  <zender@uci.edu>

	* Fix clang C++ warnings about missing parentheses in while loops
	"while result of assignment is true" (not an equality comparison)
	Many more of these need fixing, need automated method.

	* Rename nco_is_rnk_prv_rth_opr() to nco_is_sz_rnk_prv_rth_opr()
	to reflect actual usage as preserving both size and rank.
	This makes explicit that ncra is not such an operator.

2010-10-26  Charlie Zender  <zender@uci.edu>

	* Change nco_cnv_ccm_ccsm_cf_date() to handle date variable
	in output var list as either NC_INT or NC_DOUBLE.
	Necessitated because nco_cnv_ccm_ccsm_cf_date() is called when
	"date" may be stored as double to facilitate averaging.
	This has been the case for many years, since packing introduced?
	So TODO nco998 appears to be an _old_ bug.
	Now seems to work. Test with
	ncra -O -v nbdate,date,time -p ~/nco/data in.nc ~/foo.nc
	ncks -H -m -v 'date.*' ~/foo.nc

	* Change date in in.cdl to better test YYMMDD averaging

	* Change ncra from rank preserving arithmetic operator to not one